# python-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
apps/api_server/: __init__.py  celery_app.py  crud.py  dependencies.py  main.py  models.py  schemas.py  tasks.py
apps/api_server/routers/: __init__.py  tasks.py  users.py
apps/file_organizer/: __init__.py  main.py  organizer.py
apps/todo_cli/: __init__.py  main.py  models.py  storage.py
shared/: __init__.py  config.py  database.py  logging.py  utils.py
tests/: __init__.py  conftest.py
tests/test_apps/: test_api_server.py  test_file_organizer.py  test_todo_cli.py
tests/test_shared/: test_config.py  test_utils.py
